--- a/public/halloween.html
+++ b/public/halloween.html
@@ -82,6 +82,12 @@
         </div>
     </main>
 
+    <footer class="app-footer">
+      <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
+      <a href="/events" class="footer-item active"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>ИВЕНТЫ</span></a>
+      <a href="/checkpoint" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-battery-three-quarters"></i></div><span>ЧЕКПОИНТ</span></a>
+      <a href="/profile" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-user"></i></div><span>ПРОФИЛЬ</span></a>
+    </footer>
     <script src="halloween.js"></script>
 </body>
 </html>
