--- a/public/halloween.html
+++ b/public/halloween.html
@@ -32,9 +32,8 @@
         </div>
 
         <header class="page-header">
-            <a href="/menu" class="back-button"><i class="fa-solid fa-arrow-left"></i> Меню</a>
             <h1 id="event-title" class="page-header-title">Ведьминский Котел</h1>
-            <div style="width: 80px;"></div>
+            <button id="rules-button" class="rules-button"><i class="fa-solid fa-circle-info"></i></button>
         </header>
         
         <div class="page-layout">
@@ -57,14 +56,12 @@
                 <div id="error-message" class="error-message hidden"></div>
             </section>
 
-            <h2 id="reward-section-title" class="section-title">Награды Уровня 1</h2>
-            
             <section class="leaderboard-section">
-                <h3 class="subsection-title"><i class="fa-solid fa-trophy"></i> Топ в котле</h3>
+                <h3 class="subsection-title"><i class="fa-solid fa-trophy"></i> ЛУЧШИЕ УЧАСТНИКИ ИВЕНТА</h3>
                 <div class="leaderboard-header">
-                    <span>Место</span>
+                    <span class="centered-header">Место</span>
                     <span>Игрок</span>
-                    <span>Приз</span>
+                    <span class="centered-header">Приз</span>
                     <span class="align-right">Вклад</span>
                 </div>
                 <div id="leaderboard-rewards-list" class="leaderboard-list">
@@ -72,7 +69,7 @@
             </section>
 
             <section class="default-reward-section">
-                <h3 class="subsection-title"><i class="fa-solid fa-box-open"></i> Награда для всех участников</h3>
+                <h3 class="subsection-title"><i class="fa-solid fa-box-open"></i> Награда для участников которые не вошли в топ 20</h3>
                 <div id="reward-card" class="reward-card">
                     <img id="reward-image" src="" alt="Default Reward">
                     <p id="reward-name">Название предмета</p>
@@ -82,12 +79,26 @@
         </div>
     </main>
 
+    <div id="rules-modal" class="modal-overlay hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Как играть?</h3>
+                <button type="button" class="modal-close-btn">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Выполняй челленджи, ручные задания и испытания, чтобы зарабатывать билеты.</p>
+                <p>Закидывай заработанные билеты в котел. Чем больше билетов в котле, тем он становится больше, а призы в нем — лучше!</p>
+            </div>
+        </div>
+    </div>
+
     <footer class="app-footer">
       <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
       <a href="/events" class="footer-item active"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>ИВЕНТЫ</span></a>
       <a href="/checkpoint" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-battery-three-quarters"></i></div><span>ЧЕКПОИНТ</span></a>
       <a href="/profile" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-user"></i></div><span>ПРОФИЛЬ</span></a>
     </footer>
+
     <script src="halloween.js"></script>
 </body>
 </html>
