--- a/public/halloween.html
+++ b/public/halloween.html
@@ -33,8 +33,11 @@
 
         <header class="page-header">
             <h1 id="event-title" class="page-header-title">Ведьминский Котел</h1>
-            <button id="rules-button" class="rules-button"><i class="fa-solid fa-circle-info"></i></button>
         </header>
+
+        <div class="rules-button-container">
+            <button id="rules-button" class="rules-button">КАК ИГРАТЬ?</button>
+        </div>
         
         <div class="page-layout">
             <section class="top-section">
@@ -55,13 +58,13 @@
                 </form>
                 <div id="error-message" class="error-message hidden"></div>
             </section>
-
+            
             <section class="leaderboard-section">
                 <h3 class="subsection-title"><i class="fa-solid fa-trophy"></i> ЛУЧШИЕ УЧАСТНИКИ ИВЕНТА</h3>
                 <div class="leaderboard-header">
                     <span class="centered-header">Место</span>
                     <span>Игрок</span>
-                    <span class="centered-header">Приз</span>
+                    <span class="centered-header prize-header">Приз</span>
                     <span class="align-right">Вклад</span>
                 </div>
                 <div id="leaderboard-rewards-list" class="leaderboard-list">
