--- a/public/halloween.html
+++ b/public/halloween.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="halloween.css">
 </head>
 <body data-theme="halloween">
+    <div id="tutorial-overlay" class="tutorial-overlay hidden"></div>
+
     <div class="particles">
         <div class="particle"></div><div class="particle"></div><div class="particle"></div><div class="particle"></div><div class="particle"></div>
         <div class="particle"></div><div class="particle"></div><div class="particle"></div><div class="particle"></div><div class="particle"></div>
@@ -64,7 +66,7 @@
                 <div class="leaderboard-header">
                     <span class="centered-header">Место</span>
                     <span>Игрок</span>
-                    <span class="centered-header prize-header">Приз</span>
+                    <span class="centered-header">Приз</span>
                     <span class="align-right">Вклад</span>
                 </div>
                 <div id="leaderboard-rewards-list" class="leaderboard-list">
