--- a/public/halloween.html
+++ b/public/halloween.html
@@ -76,7 +76,10 @@
             <section class="default-reward-section">
                 <h3 class="subsection-title"><i class="fa-solid fa-box-open"></i> Награда для участников которые не вошли в топ 20</h3>
                 <div id="reward-card" class="reward-card">
-                    <img id="reward-image" src="" alt="Default Reward">
+                    <div class="image-zoom-container">
+                        <img id="reward-image" src="" alt="Default Reward">
+                        <div class="zoom-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    </div>
                     <p id="reward-name">Название предмета</p>
                 </div>
             </section>
@@ -96,6 +99,12 @@
             </div>
         </div>
     </div>
+
+    <div id="image-viewer-modal" class="image-viewer-overlay hidden">
+        <button type="button" class="viewer-close-btn">&times;</button>
+        <img src="" alt="Просмотр приза" class="viewer-image">
+    </div>
+
 
     <footer class="app-footer">
       <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
