--- a/public/admin.html
+++ b/public/admin.html
@@ -193,6 +193,10 @@
                 <div class="settings-group">
                     <h3>Системы</h3>
                     <div class="setting-item">
+                        <span class="setting-label">Гонка за скинами</span>
+                        <label class="toggle-switch"><input type="checkbox" id="setting-skin-race-enabled"><span class="toggle-slider"></span></label>
+                    </div>
+                    <div class="setting-item">
                         <span class="setting-label">Система Заданий</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-quests-enabled"><span class="toggle-slider"></span></label>
                     </div>
