--- a/public/menu.html
+++ b/public/menu.html
@@ -52,7 +52,7 @@
     <div id="view-dashboard" class="view">
         <div id="main-slider-container" class="slider-container">
             <div class="slider-wrapper">
-                <a href="/events" class="slide">
+                <a href="/events" class="slide" data-event="skin_race">
                     <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
                 </a>
                <a href="/halloween" class="slide" data-event="cauldron" style="display: none;">
