--- a/public/admin.html
+++ b/public/admin.html
@@ -191,6 +191,14 @@
             </div>
             <div class="quest-card" style="margin-top: 20px;">
                 <div class="settings-group">
+                    <h3>Порядок слайдов на главной</h3>
+                    <div id="slider-order-manager">
+                        <p style="font-size: 12px; color: var(--text-color-muted);">Загрузка...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="quest-card" style="margin-top: 20px;">
+                <div class="settings-group">
                     <h3>Системы</h3>
                     <div class="setting-item">
                         <span class="setting-label">Гонка за скинами</span>
