--- a/public/profile.html
+++ b/public/profile.html
@@ -443,7 +443,7 @@
 
     <main class="main-content">
         <div class="page-header">
-            <a href="/menu" class="back-button"><i class="fa-solid fa-arrow-left"></i> Назад</a>
+            <a href="/menu" class="back-button"><i class="fa-solid fa-arrow-left"></i> ГЛАВНАЯ</a>
             <h1 id="profileName" class="page-header-title">Профиль</h1>
             <div style="width: 50px;"></div> 
         </div>
