--- a/public/halloween.html
+++ b/public/halloween.html
@@ -96,10 +96,10 @@
             <div class="modal-body">
                 <p>Выполняй челленджи, ручные задания и испытания, чтобы зарабатывать билеты.</p>
                 <p>Закидывай заработанные билеты в котел. Чем больше билетов в котле, тем он становится больше, а призы в нем — лучше!</p>
+                <p><strong>Подсказка:</strong> чтобы рассмотреть предмет и узнать его название, просто нажмите на его изображение.</p>
             </div>
         </div>
     </div>
-
     <div id="image-viewer-modal" class="image-viewer-overlay hidden">
         <button type="button" class="viewer-close-btn">&times;</button>
         <div class="viewer-content-wrapper">
@@ -109,6 +109,7 @@
     </div>
 
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDd2azc1aXVvcmE3eG81a3FxZDlya2M4c3NmNDZweHFnOW8za3d2eiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/GqegZvkq9kgxuk1kTC/giphy.gif" alt="Flying Witch" class="flying-witch">
+
     <footer class="app-footer">
       <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
       <a href="/events" class="footer-item active"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>ИВЕНТЫ</span></a>
