--- a/public/halloween.html
+++ b/public/halloween.html
@@ -22,6 +22,8 @@
     </div>
 
     <main id="app-container" class="main-content hidden">
+        <img id="flask-animation" src="https://i.postimg.cc/XYxLQYTF/giphy-flusk.gif" alt="Animating flask" class="flask-animation">
+
         <div id="admin-notice" class="admin-notice hidden">
             <i class="fa-solid fa-eye-slash"></i>
             <span>Режим администратора: ивент скрыт для обычных пользователей.</span>
@@ -100,6 +102,7 @@
             </div>
         </div>
     </div>
+
     <div id="image-viewer-modal" class="image-viewer-overlay hidden">
         <button type="button" class="viewer-close-btn">&times;</button>
         <div class="viewer-content-wrapper">
@@ -108,7 +111,7 @@
         </div>
     </div>
 
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDd2azc1aXVvcmE3eG81a3FxZDlya2M4c3NmNDZweHFnOW8za3d2eiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/GqegZvkq9kgxuk1kTC/giphy.gif" alt="Flying Witch" class="flying-witch">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDd2azc1aXVvcmE3eG81a3FxZDlya2M4c3NmNDZweHFnOW8za3d2eiZlcD12MV9pbnRlcm5hbF_naWZfYnlfaWQmY3Q9cw/GqegZvkq9kgxuk1kTC/giphy.gif" alt="Flying Witch" class="flying-witch">
 
     <footer class="app-footer">
       <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
