--- a/public/cauldron-overlay.html
+++ b/public/cauldron-overlay.html
@@ -275,10 +275,10 @@
         }
 
         // Запускаем постоянную анимацию для проверки
-        // setInterval(showPromoAnimation, 12000); // Каждые 12 секунд для теста
+           setInterval(showPromoAnimation, 12000); // Каждые 12 секунд для теста
         
         // Когда закончите тесты, замените строку выше на эту:
-        setInterval(showPromoAnimation, 5 * 60 * 1000); // Раз в 5 минут
+        // setInterval(showPromoAnimation, 5 * 60 * 1000); // Раз в 5 минут
         
     </script>
 </body>
