--- a/public/cauldron-overlay.html
+++ b/public/cauldron-overlay.html
@@ -371,8 +371,8 @@
                 });
         } catch (error) { console.error("Failed to connect to Supabase:", error); }
 
-        // ИЗМЕНЕНИЕ: Интервал ~5 минут (300 секунд + 2 секунды буфер)
-        setInterval(showPromoAnimation, 302000);
+        // ИЗМЕНЕНИЕ: Интервал ~3 минуты (180 секунд + 2 секунды буфер)
+        setInterval(showPromoAnimation, 182000);
         
     </script>
 </body>
