--- a/public/menu.html
+++ b/public/menu.html
@@ -113,7 +113,17 @@
         </div>
     </div>
   </div>
-
+  <div id="tickets-claimed-overlay" class="prompt-overlay hidden">
+    <div class="prompt-modal">
+        <h3>Билеты получены!</h3>
+        <p style="font-size: 14px; line-height: 1.5; color: var(--text-color-muted);">
+            Билеты за выполнение задания успешно начислены на ваш баланс.
+        </p>
+        <div class="prompt-actions">
+            <button id="tickets-claim-close-btn" class="confirm-btn">Отлично!</button>
+        </div>
+    </div>
+  </div>
   <div id="info-modal-overlay" class="prompt-overlay hidden">
     <div class="prompt-modal">
         <h3>Что такое билеты?</h3>
