--- a/public/halloween.html
+++ b/public/halloween.html
@@ -41,6 +41,7 @@
 
         <div id="event-dates-display" class="event-timer" data-editable="dates">
             </div>
+
         <div class="rules-button-container">
             <button id="rules-button" class="rules-button">КАК ИГРАТЬ?</button>
         </div>
@@ -87,13 +88,17 @@
                     <p id="reward-name">Название предмета</p>
                 </div>
             </section>
-    
         </div>
     </main>
 
     <div id="admin-controls" class="admin-controls hidden">
-        <button id="edit-btn">Редактировать</button>
-        <button id="save-btn">Сохранить</button>
+        <button id="toggle-edit-btn" class="admin-toggle-btn" title="Показать/скрыть кнопки">
+            <i class="fa-solid fa-chevron-down"></i>
+        </button>
+        <div class="admin-action-buttons">
+            <button id="edit-btn">Редактировать</button>
+            <button id="save-btn">Сохранить</button>
+        </div>
     </div>
     <div id="rules-modal" class="modal-overlay hidden">
         <div class="modal-content">
@@ -134,6 +139,8 @@
             </div>
         </div>
     </div>
+
+
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDd2azc1aXVvcmE3eG81a3FxZDlya2M4c3NmNDZweHFnOW8za3d2eiZlcD12MV9pbnRlcm5hbF_naWZfYnlfaWQmY3Q9cw/GqegZvkq9kgxuk1kTC/giphy.gif" alt="Flying Witch" class="flying-witch">
 
     <footer class="app-footer">
