--- a/public/admin.html
+++ b/public/admin.html
@@ -21,7 +21,7 @@
     <main id="app-container" class="main-content">
         <div id="view-admin-main" class="view">
             <div class="page-header">
-                <a href="/menu" class="back-button"><i class="fa-solid fa-house"></i> На сайт</a>
+                <a href="/menu" class="back-button"><i class="fa-solid fa-house"></i> Назад</a>
                 <h1 class="page-header-title">Админка</h1>
                 <div style="width: 80px;"></div>
             </div>
