--- a/public/admin.html
+++ b/public/admin.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+    <div id="loader-overlay" class="loader-wrapper hidden">
+        <div class="loader"></div> 
+    </div>
+  
     <button id="sleep-mode-toggle" class="sleep-mode-toggle hidden" title="Режим сна">
         <i class="fa-solid fa-power-off"></i>
     </button>
