--- a/public/admin.html
+++ b/public/admin.html
@@ -323,7 +323,9 @@
             </div>
             <div id="quests-list" class="quests-container"></div>
         </div>
-
+                <button id="save-order-button" class="admin-action-btn approve hidden" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 100; width: auto; padding: 10px 20px;">
+            <i class="fa-solid fa-save"></i> Сохранить порядок</button>
+      
         <div id="view-admin-promocodes" class="view hidden">
             <div class="page-header">
                 <button class="back-button" data-view="view-admin-main"><i class="fa-solid fa-arrow-left"></i> Назад</button>
