--- a/public/halloween.html
+++ b/public/halloween.html
@@ -59,6 +59,9 @@
             
             <section class="contribution-section">
                 <p>Ваш баланс: <strong id="user-ticket-balance">...</strong> <i class="fa-solid fa-ticket"></i></p>
+
+                <p>Заброшено вами: <strong id="user-contribution-total">...</strong> <i class="fa-solid fa-ticket"></i></p>
+                <p>Ваше место: <strong id="user-leaderboard-rank">...</strong></p>
                 <form id="contribution-form">
                     <input type="number" id="tickets-input" placeholder="Кол-во билетов" min="1" required>
                     <button type="submit">Вложить в котел</button>
